--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
-    android:background="#131322">
+    android:background="#131322"
+    tools:context=".HomeActivity">
 
     <CalendarView
         android:id="@+id/calendarView"
@@ -21,33 +21,31 @@
         android:id="@+id/notesBg"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@id/calendarView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_menu"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calendarView">
 
         <TextView
             android:id="@+id/textNotes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
             android:text="Notes"
             android:textColor="#FFFFFF"
-            app:layout_constraintTop_toTopOf="@id/notesBg"
-            app:layout_constraintStart_toStartOf="@id/notesBg"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="30dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            />
+            app:layout_constraintStart_toStartOf="@id/notesBg"
+            app:layout_constraintTop_toTopOf="@id/notesBg" />
 
         <TextView
             android:id="@+id/resultNotes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:textColor="@color/gray"
-            app:layout_constraintTop_toBottomOf="@id/textNotes"
-            android:layout_marginTop="20dp"/>
+            app:layout_constraintTop_toBottomOf="@id/textNotes" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -56,19 +54,30 @@
         android:layout_width="match_parent"
         android:layout_height="85dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#06060B"
             android:layout_gravity="bottom"
+            android:backgroundTint="#06060B"
             app:fabCradleMargin="8dp"
-            app:fabCradleRoundedCornerRadius="20dp"/>
+            app:fabCradleRoundedCornerRadius="20dp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:background="#06060B"
+                app:itemIconTint="@color/white"
+                app:labelVisibilityMode="unlabeled"
+                app:menu="@menu/bottom_navigation" />
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -76,29 +85,9 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#FF00F2"
             android:src="@drawable/ic_add"
-            app:maxImageSize="40dp"
-            app:layout_anchor="@id/bottomAppBar" />
+            app:layout_anchor="@id/bottomAppBar"
+            app:maxImageSize="40dp" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/ic_calendar"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_menu"
-        app:layout_constraintStart_toStartOf="@id/bottom_menu"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="70dp"
-        />
-
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/ic_book"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_menu"
-        app:layout_constraintEnd_toEndOf="@id/bottom_menu"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="70dp"
-        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
