--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#131322"
-    tools:context=".RegistrationActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.FirstFragment"
+    android:background="#131322">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:text="REGISTER"
-        android:textColor="#FFFFFF"
+        android:layout_marginEnd="200dp"
+        android:text="LOGIN"
         android:textSize="25dp"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/bgLeft" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bgRight" />
 
     <Button
-        android:id="@+id/logBtn"
+        android:id="@+id/replaceReg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
         android:background="@android:color/transparent"
-        android:text="Login"
+        android:text="REGISTER"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/bgLeft"
-        app:layout_constraintTop_toTopOf="@id/bgLeft" />
+        app:layout_constraintEnd_toEndOf="@id/bgRight"
+        app:layout_constraintTop_toTopOf="@id/bgRight" />
 
     <ImageView
-        android:id="@+id/bgLeft"
+        android:id="@+id/bgRight"
         android:layout_width="210dp"
         android:layout_height="450dp"
-        android:src="@drawable/bg_left"
+        android:src="@drawable/bg_right"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card2"
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -57,41 +58,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/white">
 
             <EditText
-                android:id="@+id/nameReg"
+                android:id="@+id/loginIn"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:drawableStart="@drawable/ic_person"
-                android:drawablePadding="10dp"
-                android:drawableTint="#FF4C4C4C"
-                android:hint="Name"
-                android:textColor="#FF4C4C4C"
-                android:textColorHint="#FF4C4C4C"
-                android:textSize="20dp" />
-
-            <EditText
-                android:id="@+id/logReg"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
                 android:drawableTint="#FF4C4C4C"
                 android:hint="Login"
+                android:textColorHint="#4C4C4C"
                 android:textColor="#FF4C4C4C"
-                android:textColorHint="#FF4C4C4C"
                 android:textSize="20dp" />
 
             <EditText
-                android:id="@+id/passReg"
+                android:id="@+id/passwordIn"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -101,23 +87,23 @@
                 android:drawablePadding="10dp"
                 android:drawableTint="#FF4C4C4C"
                 android:hint="Password"
-                android:inputType="textPassword"
-                android:textColor="#FF4C4C4C"
                 android:textColorHint="#FF4C4C4C"
+                android:textColor="#FF4C4C4C"
+                android:inputType="textPassword"
                 android:textSize="20dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/btnLogin2"
+        android:id="@+id/btnLogin"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:background="@drawable/login_btn_bg"
         android:text="Login"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/card2"
-        app:layout_constraintEnd_toEndOf="@+id/card2"
-        app:layout_constraintStart_toStartOf="@+id/card2"
-        app:layout_constraintTop_toBottomOf="@+id/card2" />
+        android:background="@drawable/login_btn_bg"
+        app:layout_constraintBottom_toBottomOf="@+id/card"
+        app:layout_constraintEnd_toEndOf="@+id/card"
+        app:layout_constraintStart_toStartOf="@+id/card"
+        app:layout_constraintTop_toBottomOf="@+id/card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
