--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#131322"
-    tools:context=".RegistrationActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.SecondFragment"
+    android:background="#131322">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,11 +20,11 @@
         app:layout_constraintTop_toTopOf="@id/bgLeft" />
 
     <Button
-        android:id="@+id/logBtn"
+        android:id="@+id/replaceLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="50dp"
         android:background="@android:color/transparent"
         android:text="Login"
         android:textColor="@color/white"
@@ -57,8 +57,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/white">
 
             <EditText
                 android:id="@+id/nameReg"
@@ -86,8 +86,8 @@
                 android:drawablePadding="10dp"
                 android:drawableTint="#FF4C4C4C"
                 android:hint="Login"
-                android:textColor="#FF4C4C4C"
                 android:textColorHint="#FF4C4C4C"
+                android:textColor="#FF4C4C4C"
                 android:textSize="20dp" />
 
             <EditText
@@ -101,9 +101,9 @@
                 android:drawablePadding="10dp"
                 android:drawableTint="#FF4C4C4C"
                 android:hint="Password"
-                android:inputType="textPassword"
-                android:textColor="#FF4C4C4C"
                 android:textColorHint="#FF4C4C4C"
+                android:textColor="#FF4C4C4C"
+                android:inputType="textPassword"
                 android:textSize="20dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -112,9 +112,9 @@
         android:id="@+id/btnLogin2"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:background="@drawable/login_btn_bg"
         android:text="Login"
         android:textColor="@color/white"
+        android:background="@drawable/login_btn_bg"
         app:layout_constraintBottom_toBottomOf="@+id/card2"
         app:layout_constraintEnd_toEndOf="@+id/card2"
         app:layout_constraintStart_toStartOf="@+id/card2"
